[gd_scene load_steps=6 format=3 uid="uid://c5y8xtt503vkd"]

[ext_resource type="Script" path="res://level.gd" id="1_h5sfw"]

[sub_resource type="Animation" id="Animation_kvpij"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/fader:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.190762, 0.190762, 0.190762, 1)]
}

[sub_resource type="Animation" id="Animation_ths0v"]
resource_name = "finish"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/fader:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.192157, 0.192157, 0.192157, 0), Color(0.190762, 0.190762, 0.190762, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/fader")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"show"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"end"
}]
}

[sub_resource type="Animation" id="Animation_0mk5l"]
resource_name = "start"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/fader:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.190762, 0.190762, 0.190762, 1), Color(0.192157, 0.192157, 0.192157, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/fader")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"show"
}, {
"args": [],
"method": &"hide"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wmyn5"]
_data = {
"RESET": SubResource("Animation_kvpij"),
"finish": SubResource("Animation_ths0v"),
"start": SubResource("Animation_0mk5l")
}

[node name="Level" type="Node2D"]
script = ExtResource("1_h5sfw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="fader" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.190762, 0.190762, 0.190762, 1)

[node name="levelLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -223.0
offset_top = -19.0
grow_horizontal = 0
grow_vertical = 0
text = "lv#####	"
horizontal_alignment = 2

[node name="restartLevelButton" type="Button" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -103.0
offset_bottom = 27.0
grow_horizontal = 0
text = "Restart Level"

[node name="restartAllButton" type="Button" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -103.0
offset_top = 29.0
offset_bottom = 56.0
grow_horizontal = 0
text = "Restart All"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wmyn5")
}

[connection signal="pressed" from="CanvasLayer/restartLevelButton" to="." method="_on_restart_level_button_pressed"]
[connection signal="pressed" from="CanvasLayer/restartAllButton" to="." method="_on_restart_all_button_pressed"]
